@@ -12,22 +12,18 @@
  ******************************************************************************/
 package org.eclipse.zest.layouts.exampleUses;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.Iterator;
 import java.util.List;
 
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.SWTError;
+import org.eclipse.swt.events.ControlAdapter;
 import org.eclipse.swt.events.ControlEvent;
-import org.eclipse.swt.events.ControlListener;
+import org.eclipse.swt.events.MouseAdapter;
 import org.eclipse.swt.events.MouseEvent;
-import org.eclipse.swt.events.MouseListener;
 import org.eclipse.swt.events.PaintEvent;
 import org.eclipse.swt.events.PaintListener;
+import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.graphics.Image;
@@ -39,31 +35,21 @@ import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Canvas;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Display;
-import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.swt.widgets.ToolBar;
 import org.eclipse.swt.widgets.ToolItem;
 
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.jface.dialogs.ProgressMonitorDialog;
-import org.eclipse.zest.layouts.InvalidLayoutConfiguration;
 import org.eclipse.zest.layouts.LayoutAlgorithm;
-import org.eclipse.zest.layouts.LayoutBendPoint;
-import org.eclipse.zest.layouts.LayoutEntity;
-import org.eclipse.zest.layouts.LayoutRelationship;
-import org.eclipse.zest.layouts.LayoutStyles;
-import org.eclipse.zest.layouts.algorithms.AbstractLayoutAlgorithm;
+import org.eclipse.zest.layouts.algorithms.BoxLayoutAlgorithm;
 import org.eclipse.zest.layouts.algorithms.GridLayoutAlgorithm;
-import org.eclipse.zest.layouts.algorithms.HorizontalLayoutAlgorithm;
-import org.eclipse.zest.layouts.algorithms.HorizontalTreeLayoutAlgorithm;
 import org.eclipse.zest.layouts.algorithms.RadialLayoutAlgorithm;
 import org.eclipse.zest.layouts.algorithms.SpringLayoutAlgorithm;
 import org.eclipse.zest.layouts.algorithms.TreeLayoutAlgorithm;
-import org.eclipse.zest.layouts.algorithms.VerticalLayoutAlgorithm;
+import org.eclipse.zest.layouts.exampleStructures.SimpleGraph;
 import org.eclipse.zest.layouts.exampleStructures.SimpleNode;
 import org.eclipse.zest.layouts.exampleStructures.SimpleRelationship;
-import org.eclipse.zest.layouts.progress.ProgressEvent;
-import org.eclipse.zest.layouts.progress.ProgressListener;
 
 /**
  * @author Rob Lintern
@@ -100,35 +86,32 @@ public class SimpleSWTExample {
 	private static final double INITIAL_NODE_WIDTH = 20;
 	private static final double INITIAL_NODE_HEIGHT = 15;
 
-	protected static ArrayList<AbstractLayoutAlgorithm.Zest1> algorithms = new ArrayList<>(Arrays.asList(
-			new SpringLayoutAlgorithm.Zest1(LayoutStyles.NO_LAYOUT_NODE_RESIZING),
-			new TreeLayoutAlgorithm.Zest1(LayoutStyles.NONE), new HorizontalTreeLayoutAlgorithm(LayoutStyles.NONE),
-			new RadialLayoutAlgorithm.Zest1(LayoutStyles.NONE), new GridLayoutAlgorithm.Zest1(LayoutStyles.NONE),
-			new HorizontalLayoutAlgorithm(LayoutStyles.NONE), new VerticalLayoutAlgorithm(LayoutStyles.NONE)));
+	protected static List<LayoutAlgorithm> algorithms = List.of(new SpringLayoutAlgorithm(), //
+			new TreeLayoutAlgorithm(), //
+			new TreeLayoutAlgorithm(TreeLayoutAlgorithm.LEFT_RIGHT), //
+			new RadialLayoutAlgorithm(), //
+			new GridLayoutAlgorithm(), //
+			new BoxLayoutAlgorithm(SWT.HORIZONTAL), //
+			new BoxLayoutAlgorithm(SWT.VERTICAL));
 
-	@SuppressWarnings("nls")
-	protected static ArrayList<String> algorithmNames = new ArrayList<>(
-			Arrays.asList("Spring", "Fade", "Tree - V", "Tree - H", "Radial", "Grid", "Horizontal", "Vertical"));
-
-	protected static ArrayList<Boolean> algorithmAnimates = new ArrayList<>(Arrays.asList(Boolean.TRUE, Boolean.TRUE,
-			Boolean.FALSE, Boolean.FALSE, Boolean.FALSE, Boolean.FALSE, Boolean.FALSE, Boolean.FALSE));
-
+	protected static List<String> algorithmNames = List.of(Messages.getString("SimpleSWTExample.SpringLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.TreeVLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.TreeHLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.RadialLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.GridLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.HorizontalLayout"), //$NON-NLS-1$
+			Messages.getString("SimpleSWTExample.VerticalLayout")); //$NON-NLS-1$
 	// private long updateGUICount = 0;
-	private boolean animate = true;
-	private static boolean continuous = false;
-	private static boolean asynchronously = false;
 
 	private final Shell mainShell;
 	private Composite mainComposite;
-	private List entities;
-	private List relationships;
 
 	private final ToolBar toolBar;
-	private final Label lblProgress;
 
-	private LayoutAlgorithm.Zest1 currentLayoutAlgorithm;
+	private LayoutAlgorithm currentLayoutAlgorithm;
 	protected SimpleNode selectedEntity;
 	protected SimpleNode hoverEntity;
+	private SimpleGraph graph;
 
 	protected Point mouseDownPoint;
 	protected Point selectedEntityPositionAtMouseDown;
@@ -136,105 +119,40 @@ public class SimpleSWTExample {
 
 	public SimpleSWTExample(Display display) {
 		mainShell = new Shell(display);
-		mainShell.addControlListener(new ControlListener() {
-			@Override
-			public void controlMoved(ControlEvent e) {
-			}
-
+		mainShell.addControlListener(new ControlAdapter() {
 			@Override
 			public void controlResized(ControlEvent e) {
 				mainShell.layout(true);
 			}
 		});
-		GridLayout gridLayout = new GridLayout(1, true);
-		mainShell.setLayout(gridLayout);
-		GridData toolbarGridData = new GridData(GridData.HORIZONTAL_ALIGN_CENTER, GridData.VERTICAL_ALIGN_BEGINNING,
-				true, true);
+		mainShell.setLayout(new GridLayout());
 		toolBar = new ToolBar(mainShell, SWT.HORIZONTAL);
-		toolBar.setLayoutData(toolbarGridData);
+		toolBar.setLayoutData(new GridData(SWT.CENTER, SWT.BEGINNING, true, false));
 		toolBar.setLayout(new FillLayout(SWT.HORIZONTAL));
 
-		GridData progressGridData = new GridData(GridData.HORIZONTAL_ALIGN_CENTER, GridData.VERTICAL_ALIGN_END, true,
-				false);
-		progressGridData.widthHint = 300;
-		lblProgress = new Label(mainShell, SWT.NONE);
-		lblProgress.setLayoutData(progressGridData);
-		lblProgress.setText("Progress: "); //$NON-NLS-1$
-
 		for (int i = 0; i < algorithms.size(); i++) {
-			final LayoutAlgorithm.Zest1 algorithm = algorithms.get(i);
+			final LayoutAlgorithm algorithm = algorithms.get(i);
 			String algorithmName = algorithmNames.get(i);
-			final boolean algorithmAnimate = algorithmAnimates.get(i).booleanValue();
 			ToolItem algorithmButton = new ToolItem(toolBar, SWT.PUSH);
 			algorithmButton.setText(algorithmName);
 
 			new ToolItem(toolBar, SWT.SEPARATOR);
 
-			algorithmButton.addSelectionListener(new SelectionListener() {
+			algorithmButton.addSelectionListener(new SelectionAdapter() {
 				@Override
 				public void widgetSelected(org.eclipse.swt.events.SelectionEvent e) {
 					currentLayoutAlgorithm = algorithm;
-					algorithm.setEntityAspectRatio((double) mainComposite.getClientArea().width
-							/ (double) mainComposite.getClientArea().height);
-					animate = algorithmAnimate;
 					performLayout(false);
-				}
-
-				@Override
-				public void widgetDefaultSelected(org.eclipse.swt.events.SelectionEvent e) {
 				}
 			});
 		}
 
 		ToolItem redrawButton = new ToolItem(toolBar, SWT.PUSH);
-		redrawButton.setText("Redraw"); //$NON-NLS-1$
-		redrawButton.addSelectionListener(new SelectionListener() {
+		redrawButton.setText(Messages.getString("SimpleSWTExample.Redraw")); //$NON-NLS-1$
+		redrawButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
 				mainComposite.redraw();
-			}
-
-			@Override
-			public void widgetDefaultSelected(SelectionEvent e) {
-			}
-		});
-
-		ToolItem stopButton = new ToolItem(toolBar, SWT.PUSH);
-		stopButton.setText("Stop"); //$NON-NLS-1$
-		stopButton.addSelectionListener(new SelectionListener() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				currentLayoutAlgorithm.stop();
-			}
-
-			@Override
-			public void widgetDefaultSelected(SelectionEvent e) {
-			}
-		});
-
-		ToolItem continuousButton = new ToolItem(toolBar, SWT.CHECK);
-		continuousButton.setText("Continuous"); //$NON-NLS-1$
-		continuousButton.addSelectionListener(new SelectionListener() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				setContinuous();
-			}
-
-			@Override
-			public void widgetDefaultSelected(SelectionEvent e) {
-			}
-		});
-
-		ToolItem asynchronousButton = new ToolItem(toolBar, SWT.CHECK);
-		asynchronousButton.setText("Asynchronous"); //$NON-NLS-1$
-		asynchronousButton.addSelectionListener(new SelectionListener() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				setAsynchronously();
-			}
-
-			@Override
-			public void widgetDefaultSelected(SelectionEvent e) {
 			}
 		});
 
@@ -248,160 +166,21 @@ public class SimpleSWTExample {
 		// mainShell.setSize(INITIAL_PANEL_WIDTH + 100, INITIAL_PANEL_HEIGHT + 200);
 	}
 
-	public void setAsynchronously() {
-		if (asynchronously) {
-			asynchronously = false;
-		} else {
-			asynchronously = true;
-		}
-
-	}
-
-	public void setContinuous() {
-		if (continuous) {
-			continuous = false;
-		} else {
-			continuous = true;
-		}
-	}
-
 	IProgressMonitor progressMonitor = null;
 	ProgressMonitorDialog pmd = null;
 	boolean GUI_UPDATING = false;
 
 	private void performLayout(boolean placeRandomly) {
-
-		if (!continuous) {
-		}
-
-		if (currentLayoutAlgorithm.isRunning()) {
-			throw new RuntimeException("Layout is already running"); //$NON-NLS-1$
-		}
 		if (placeRandomly) {
 			placeRandomly();
 		}
-		ProgressListener progressListener = new ProgressListener() {
 
-			int lastStep = 0;
+		Rectangle bounds = mainComposite.getClientArea();
+		graph.setBounds(bounds.x, bounds.y, bounds.width, bounds.height);
 
-			class progressSync implements Runnable {
-
-				public static final int PROGRESS_UPDATED = 1;
-				public static final int PROGRESS_STARTED = 2;
-				public static final int PROGRESS_ENDED = 3;
-				public static final int UPDATE_GUI = 4;
-
-				private int progressState = -1;
-				private final ProgressEvent e;
-
-				public progressSync(int progressState, final ProgressEvent e) {
-					this.progressState = progressState;
-					this.e = e;
-
-				}
-
-				@Override
-				public void run() {
-
-					switch (progressState) {
-					case PROGRESS_STARTED:
-						if (!continuous) {
-							pmd = new ProgressMonitorDialog(getShell());
-							progressMonitor = pmd.getProgressMonitor();
-							pmd.open();
-							progressMonitor.beginTask("Layout Running...", e.getTotalNumberOfSteps()); //$NON-NLS-1$
-						}
-						break;
-
-					case PROGRESS_UPDATED:
-						if (!continuous) {
-							progressMonitor.worked(e.getStepsCompleted() - lastStep);
-							lastStep = e.getStepsCompleted();
-						}
-						break;
-
-					case PROGRESS_ENDED:
-						if (!continuous) {
-							progressMonitor.done();
-							pmd.close();
-						}
-						updateGUI();
-						mainShell.redraw();
-						break;
-					case UPDATE_GUI:
-						updateGUI();
-						GUI_UPDATING = false;
-						break;
-					}
-					mainComposite.redraw();
-
-				}
-
-			}
-
-			@Override
-			public void progressUpdated(final ProgressEvent e) {
-				if (asynchronously) {
-					if (!mainComposite.isDisposed()) {
-						Display.getDefault().asyncExec(new progressSync(progressSync.PROGRESS_UPDATED, e));
-						if (!GUI_UPDATING) {
-							GUI_UPDATING = true;
-							Display.getDefault().asyncExec(new progressSync(progressSync.UPDATE_GUI, e));
-						}
-					}
-				} else {
-					if (!mainComposite.isDisposed()) {
-						new progressSync(progressSync.PROGRESS_UPDATED, e).run();
-					}
-				}
-
-			}
-
-			@Override
-			public void progressStarted(ProgressEvent e) {
-				if (asynchronously) {
-					if (!mainComposite.isDisposed()) {
-						Display.getDefault().asyncExec(new progressSync(progressSync.PROGRESS_STARTED, e));
-					}
-				} else {
-					if (!mainComposite.isDisposed()) {
-						new progressSync(progressSync.PROGRESS_STARTED, e).run();
-					}
-				}
-
-			}
-
-			@Override
-			public void progressEnded(ProgressEvent e) {
-				if (asynchronously) {
-					if (!mainComposite.isDisposed()) {
-						Display.getDefault().asyncExec(new progressSync(progressSync.PROGRESS_ENDED, e));
-					}
-				} else {
-					if (!mainComposite.isDisposed()) {
-						new progressSync(progressSync.PROGRESS_ENDED, e).run();
-					}
-				}
-				currentLayoutAlgorithm.removeProgressListener(this);
-				Display.getDefault().asyncExec(new progressSync(progressSync.PROGRESS_UPDATED, e));
-			}
-		};
-		currentLayoutAlgorithm.addProgressListener(progressListener);
-
-		try {
-			LayoutEntity[] layoutEntities = new LayoutEntity[entities.size()];
-			entities.toArray(layoutEntities);
-			LayoutRelationship[] layoutRelationships = new LayoutRelationship[relationships.size()];
-			relationships.toArray(layoutRelationships);
-			currentLayoutAlgorithm.applyLayout(layoutEntities, layoutRelationships, 0, 0,
-					mainComposite.getClientArea().width - 30, mainComposite.getClientArea().height - 17, asynchronously,
-					continuous);
-			if (!animate) {
-				updateGUI();
-			}
-		} catch (InvalidLayoutConfiguration e) {
-			e.printStackTrace();
-		}
+		currentLayoutAlgorithm.setLayoutContext(graph);
+		currentLayoutAlgorithm.applyLayout(true);
+		updateGUI();
 	}
 
 	private Shell getShell() {
@@ -410,7 +189,7 @@ public class SimpleSWTExample {
 
 	private void createMainPanel() {
 		mainComposite = new Canvas(mainShell, SWT.NO_BACKGROUND);
-		GridData mainGridData = new GridData(GridData.HORIZONTAL_ALIGN_FILL, GridData.VERTICAL_ALIGN_FILL, true, true);
+		GridData mainGridData = new GridData(GridData.FILL, GridData.FILL, true, true);
 		mainGridData.widthHint = INITIAL_PANEL_WIDTH;
 		mainGridData.heightHint = INITIAL_PANEL_HEIGHT;
 		mainComposite.setLayoutData(mainGridData);
@@ -426,8 +205,7 @@ public class SimpleSWTExample {
 				SimpleNode oldEntity = hoverEntity;
 				hoverEntity = null;
 
-				for (Iterator iter = entities.iterator(); iter.hasNext() && selectedEntity == null;) {
-					SimpleNode entity = (SimpleNode) iter.next();
+				for (SimpleNode entity : graph.getNodes()) {
 					double x = entity.getX();
 					double y = entity.getY();
 					double w = entity.getWidth();
@@ -447,18 +225,12 @@ public class SimpleSWTExample {
 			}
 
 		});
-		mainComposite.addMouseListener(new MouseListener() {
-
-			@Override
-			public void mouseDoubleClick(MouseEvent e) {
-			}
-
+		mainComposite.addMouseListener(new MouseAdapter() {
 			@Override
 			public void mouseDown(MouseEvent e) {
 				selectedEntity = null;
 				hoverEntity = null;
-				for (Iterator iter = entities.iterator(); iter.hasNext() && selectedEntity == null;) {
-					SimpleNode entity = (SimpleNode) iter.next();
+				for (SimpleNode entity : graph.getNodes()) {
 					double x = entity.getX();
 					double y = entity.getY();
 					double w = entity.getWidth();
@@ -466,6 +238,7 @@ public class SimpleSWTExample {
 					Rectangle rect = new Rectangle((int) x, (int) y, (int) w, (int) h);
 					if (rect.contains(e.x, e.y)) {
 						selectedEntity = entity;
+						break;
 					}
 				}
 				if (selectedEntity != null) {
@@ -478,6 +251,7 @@ public class SimpleSWTExample {
 					mouseDownPoint = null;
 					selectedEntityPositionAtMouseDown = null;
 				}
+				mainComposite.redraw();
 			}
 
 			@Override
@@ -485,13 +259,14 @@ public class SimpleSWTExample {
 				if (selectedEntity != null) {
 					selectedEntity.ignoreInLayout(false);
 					selectedEntity.setUnSelected();
-					List relatedNodes = selectedEntity.getRelatedEntities();
-					for (Object relatedNode : relatedNodes) {
-						SimpleNode element = (SimpleNode) relatedNode;
+					List<SimpleNode> relatedNodes = selectedEntity.getRelatedEntities();
+					for (SimpleNode element : relatedNodes) {
 						element.setUnSelected();
 					}
-					SimpleRelationship[] rels = selectedEntity.getRelationships();
-					for (SimpleRelationship rel : rels) {
+					for (SimpleRelationship rel : selectedEntity.getOutgoingConnections()) {
+						rel.resetLineWidth();
+					}
+					for (SimpleRelationship rel : selectedEntity.getIncomingConnections()) {
 						rel.resetLineWidth();
 					}
 				}
@@ -501,21 +276,25 @@ public class SimpleSWTExample {
 			}
 		});
 
-		// stops the algorithm when the window is closed
-		mainComposite.addDisposeListener(e -> {
-			if (currentLayoutAlgorithm != null) {
-				currentLayoutAlgorithm.stop();
-			}
-		});
-
 		mainComposite.addMouseMoveListener(e -> {
 			if (selectedEntity != null && mouseDownPoint != null) {
 				double dx = e.x - mouseDownPoint.x;
 				double dy = e.y - mouseDownPoint.y;
 
+				selectedEntity.ignoreInLayout(false);
 				selectedEntity.setLocation(selectedEntityPositionAtMouseDown.x + dx,
 						selectedEntityPositionAtMouseDown.y + dy);
+				selectedEntity.ignoreInLayout(true);
 				mainComposite.redraw();
+			}
+		});
+
+		mainComposite.addControlListener(new ControlAdapter() {
+			@Override
+			public void controlResized(ControlEvent e) {
+				if (currentLayoutAlgorithm != null) {
+					performLayout(false);
+				}
 			}
 		});
 	}
@@ -531,28 +310,23 @@ public class SimpleSWTExample {
 	 *                    maxChildren)
 	 */
 	private void createTreeGraph(int maxLevels, int maxChildren, boolean random) {
-		entities = new ArrayList();
-		relationships = new ArrayList();
+		graph = new SimpleGraph();
 
 		// ccallendar - testing out having 2 roots
 		SimpleNode root = createSimpleNode(getNextID());
-		entities.add(root);
+		graph.addEntity(root);
 		SimpleNode root2 = createSimpleNode(getNextID());
-		entities.add(root2);
+		graph.addEntity(root2);
 		// end
 
 		SimpleNode currentParent = createSimpleNode(getNextID());
-		entities.add(currentParent);
+		graph.addEntity(currentParent);
 
 		// ccallendar - adding relationships from the parent to the 2 roots
 		SimpleRelationship rel = new SimpleRelationship(root, currentParent, false);
-		root.addRelationship(rel);
-		currentParent.addRelationship(rel);
-		relationships.add(rel);
+		graph.addRelationship(rel);
 		rel = new SimpleRelationship(root2, currentParent, false);
-		root2.addRelationship(rel);
-		currentParent.addRelationship(rel);
-		relationships.add(rel);
+		graph.addRelationship(rel);
 		// end
 
 		int levels = random ? (int) (Math.random() * maxLevels + 1) : maxLevels;
@@ -568,11 +342,9 @@ public class SimpleSWTExample {
 		int numChildren = random ? (int) (Math.random() * maxChildren + 1) : maxChildren;
 		for (int child = 0; child < numChildren; child++) {
 			SimpleNode childNode = createSimpleNode(getNextID());
-			entities.add(childNode);
+			graph.addEntity(childNode);
 			SimpleRelationship rel = new SimpleRelationship(currentParentNode, childNode, false);
-			childNode.addRelationship(rel);
-			currentParentNode.addRelationship(rel);
-			relationships.add(rel);
+			graph.addRelationship(rel);
 			SimpleRelationship.setDefaultSize(2);
 			createTreeGraphRecursive(childNode, maxChildren, maxLevel, level + 1, random);
 		}
@@ -601,11 +373,10 @@ public class SimpleSWTExample {
 
 	/** Places nodes randomly on the screen **/
 	private void placeRandomly() {
-		for (Object element : entities) {
-			SimpleNode simpleNode = (SimpleNode) element;
+		for (SimpleNode simpleNode : graph.getNodes()) {
 			double x = Math.random() * INITIAL_PANEL_WIDTH - INITIAL_NODE_WIDTH;
 			double y = Math.random() * INITIAL_PANEL_HEIGHT - INITIAL_NODE_HEIGHT;
-			simpleNode.setLocationInLayout(x, y);
+			simpleNode.setLocation(x, y);
 		}
 	}
 
@@ -616,9 +387,9 @@ public class SimpleSWTExample {
 	 * @return SimpleNode
 	 */
 	private SimpleNode createSimpleNode(String name) {
-		SimpleNode simpleNode = new SimpleNode(name);
+		SimpleNode simpleNode = new SimpleNode(name, graph);
 		int w = name.length() * 8; // an initial approximation of the width
-		simpleNode.setSizeInLayout(Math.max(w, INITIAL_NODE_WIDTH), INITIAL_NODE_HEIGHT);
+		simpleNode.setSize(Math.max(w, INITIAL_NODE_WIDTH), INITIAL_NODE_HEIGHT);
 		return simpleNode;
 	}
 
@@ -650,20 +421,11 @@ public class SimpleSWTExample {
 	 */
 	private class GraphPaintListener implements PaintListener {
 
-		long lastPaint;
-
 		@Override
 		public void paintControl(PaintEvent e) {
-			Date date = new Date();
-			long currentTime = date.getTime();
-			if (currentTime - lastPaint < 40) {
-				return;
-			}
-			lastPaint = currentTime;
 			if (Display.getDefault() == null || e.width == 0 || e.height == 0) {
 				return;
 			}
-			long startTime = date.getTime();
 
 			// do a bit of our own double-buffering to stop flickering
 			Image imageBuffer;
@@ -683,10 +445,9 @@ public class SimpleSWTExample {
 			GC gcBuffer = new GC(imageBuffer);
 
 			// paint the relationships
-			for (Object relationship : relationships) {
-				SimpleRelationship rel = (SimpleRelationship) relationship;
-				SimpleNode src = (SimpleNode) rel.getSourceInLayout();
-				SimpleNode dest = (SimpleNode) rel.getDestinationInLayout();
+			for (SimpleRelationship rel : graph.getConnections()) {
+				SimpleNode src = rel.getSource();
+				SimpleNode dest = rel.getTarget();
 
 				// highlight the adjacent nodes if one of the nodes is selected
 				if (src.equals(selectedEntity)) {
@@ -699,11 +460,6 @@ public class SimpleSWTExample {
 					rel.setUnSelected();
 				}
 
-				// Add bend points if required
-				if ((rel).getBendPoints() != null && (rel).getBendPoints().length > 0) {
-					src = drawBendPoints(rel, gcBuffer); // change source to last bendpoint
-				}
-
 				double srcX = src.getX() + src.getWidth() / 2.0;
 				double srcY = src.getY() + src.getHeight() / 2.0;
 				double destX = dest.getX() + dest.getWidth() / 2.0;
@@ -713,9 +469,7 @@ public class SimpleSWTExample {
 			}
 
 			// paint the nodes
-			for (Object element : entities) {
-				SimpleNode entity = (SimpleNode) element;
-
+			for (SimpleNode entity : graph.getNodes()) {
 				String name = entity.toString();
 				Point textSize = gcBuffer.stringExtent(name);
 				int entityX = (int) entity.getX();
@@ -739,10 +493,6 @@ public class SimpleSWTExample {
 			e.gc.drawImage(imageBuffer, 0, 0);
 			imageBuffer.dispose();
 			gcBuffer.dispose();
-
-			long time = date.getTime() - startTime;
-			if (time > 200) {
-			}
 		}
 
 		/**
@@ -761,36 +511,6 @@ public class SimpleSWTExample {
 			gcBuffer.setLineWidth(rel.getLineWidth());
 			gcBuffer.drawLine((int) srcX, (int) srcY, (int) destX, (int) destY);
 		}
-
-		/**
-		 * Draws a set of lines between bendpoints TODO - This does not always draw
-		 * outside the node.
-		 *
-		 * @param relationship
-		 * @param bendNodes
-		 * @param bendEdges
-		 * @return the last bendpoint entity or null if there are no bendpoints
-		 */
-		private SimpleNode drawBendPoints(SimpleRelationship rel, GC gcBuffer) {
-			final String DUMMY_TITLE = "dummy"; //$NON-NLS-1$
-			LayoutBendPoint[] bendPoints = (rel).getBendPoints();
-			LayoutBendPoint bp;
-			SimpleNode startEntity = (SimpleNode) rel.getSourceInLayout();
-			SimpleNode destEntity = null;
-
-			double srcX = startEntity.getX() + startEntity.getWidth() / 2.0;
-			double srcY = startEntity.getY() + startEntity.getHeight() / 2.0;
-			for (int i = 1; i < bendPoints.length - 1; i++) {
-				bp = bendPoints[i];
-				destEntity = new SimpleNode(DUMMY_TITLE, bp.getX(), bp.getY(), 0.01, 0.01);
-				drawEdge(srcX, srcY, bp.getX(), bp.getY(), rel, gcBuffer);
-				startEntity = destEntity;
-				srcX = startEntity.getX();
-				srcY = startEntity.getY();
-			}
-			return destEntity;
-		}
-
 	}
 
 }
